--- a/src/index.html
+++ b/src/index.html
@@ -87,5 +87,7 @@ var timer = setInterval(function()
 </div>
 </div>
 </div>
+<div id="wb_Text4">
+<span style="color:#000000;font-family:Arial;font-size:13px;">Hello</span></div>
 </body>
 </html>
