--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@ $(document).ready(function()
 });
 </script>
 </head>
-<body onclick="PlayAudio('MediaPlayer1');return false;">
+<body onmousemove="PlayAudio('MediaPlayer1');return false;">
 <div id="wb_TextDt">
 <span style="color:#67876A;font-family:'Palatino Linotype';font-size:20px;"><strong>Wednesday<br>8th November<br>2023<br>7:00 PM</strong></span></div>
 <div id="wb_Line1">
