--- a/src/index.html
+++ b/src/index.html
@@ -15,16 +15,7 @@
          content="With the divine grace of the almighty, Smt. Sudarshna Rani & Sh. Sat Pal Rajdev inviting you and your family to Sangeet Ceremony of their beloved grand daughter to be held on 8th November at Maryland, Moga Road, Ferozepur from 7:00 PM onwards." />
       <meta property="og:url" content="" />
       <meta property="og:site_name" content="Wedding Invitation | 8th Nov" />
-      <meta name="twitter:card" content="website">
-      <meta name="twitter:site" content="Wedding Invitation | 8th Nov">
-      <meta name="twitter:title" content="Wedding Invitation | 8th Nov">
-      <meta name="twitter:description"
-         content="With the divine grace of the almighty, inviting you and your family to elder sister's wedding to be held on 8th November at Maryland, Moga Road, Ferozepur from 7:00 PM onwards.">
-      <meta name="twitter:creator" content="@Vinit_Shahdeo">
-
-
       <title>Wedding Invitation | Nov 8| Maryland, Moga Road, Ferozepur</title>
-
       <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
       <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap'>
       <link rel="stylesheet" href="./css/style.css">
@@ -38,19 +29,24 @@
       <section id="media"></section>
       <div class="wrap">
          <div class="title">
-            <h4>With the divine grace of the almighty, Smt. Sudarshna Rani & Sh. Sat Pal Rajdev</h4>
-         <h4>inviting you and your family to</h4>
+         <br>    
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>     
+         <h4>With the divine grace of the almighty, Smt. Sudarshna Rani & Sh. Sat Pal Rajdev<br>inviting you and your family to</h4>
          <h3> Sangeet Ceremony</h3>
          <h4>of their beloved grand daughter</h4>
-          <h1>Dr. Saivi </h1>
-            <h4>( D/o Ms. Manju Rajdev & Mr. Sanjeev Rajdev)</h4>
-            <h2>&</h2>
-            <h1>Dr. Jashan</h1>
-            <h4>( S/o Dr. Anjvinder Chahal & Dr. D. S. Chahal)</h4>
-            
-            <p>
-               on <span class="date">8 November 2023</span></29>, At <span class="place">Maryland </span> Moga Road, Ferozepur from 7:00 PM onwards                
-            </p>
+         <h1>Dr. Saivi </h1>
+         <h4>( D/o Ms. Manju Rajdev & Mr. Sanjeev Rajdev)</h4>
+         <h2>&</h2>
+         <h1>Dr. Jashan</h1>
+         <h4>( S/o Dr. Anjvinder Chahal & Dr. D. S. Chahal)</h4>
+         <p>
+         on <span class="date">8 November 2023</span></29>, At <span class="place">Maryland </span> Moga Road, Ferozepur from 7:00 PM onwards                
+         </p>
          </div>
       </div>
       <div id="time"></div>
@@ -61,7 +57,7 @@
         <a href="https://goo.gl/maps/6kE2vGa7rcYRgrSp8" target="_blank">
           <div class="venue">SEE THE VENUE</div>
         </a>
-        <a href="" download="Invitation | 8 Nov | Hope to see you there!">
+        <a href="https://github.com/sanjeevrajdev/my-first-static-web-app/raw/main/src/assets/Invitation.mp4" download="Invitation | 8 Nov | Hope to see you there!">
           <div class="venue">DOWNLOAD INVITATION CARD</div>
         </a>
       </div>
@@ -73,10 +69,10 @@
       <div class="music">
         <audio src="./assets/mp3/song.mp3" id="my_audio" loop="loop"></audio> 
       </div>
-      <p class="happiness">Join us in our happiness!<br><a href=" " target="_blank" class="twitter"><i class="fa fa-twitter"></i></a></p>
+      <p class="happiness">Join us in our happiness!<br><br>Waiting for your kind presence!!<br>Entire Rajdev & Tinna Family</p>
       <!-- partial -->
-      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
-      <script src='https://cdn.jsdelivr.net/gh/timoschaefer/jQuery-Sakura/jquery-sakura.min.js'></script>
+      <script src='./js/jquery.min.js'></script>
+      <script src='./js/jquery-sakura.min.js'></script>
       <script  src="./js/script.js"></script>
    </body>
 <!---
