--- a/src/index.html
+++ b/src/index.html
@@ -31,13 +31,8 @@
          <div class="title">
          <br>    
          <br>
-         <br>
-         <br>
-         <br>
-         <br>
-         <br>     
          <h4>With the divine grace of the almighty, Smt. Sudarshna Rani & Sh. Sat Pal Rajdev<br>inviting you and your family to</h4>
-         <h3> Sangeet Ceremony</h3>
+         <span class="sangeet">Sangeet Ceremony</span>
          <h4>of their beloved grand daughter</h4>
          <h1>Dr. Saivi </h1>
          <h4>( D/o Ms. Manju Rajdev & Mr. Sanjeev Rajdev)</h4>
