--- a/src/index.html
+++ b/src/index.html
@@ -24,12 +24,16 @@
    <body>
       <!-- partial:index.partial.html -->
       <div class="sakura-falling"></div>
-      <img src="https://i.imgur.com/dGOOfnA.png" alt="image-top-right" class="top-right-decoration">
-      <img src="https://i.imgur.com/t6ffnbn.png" alt="image-top-left" class="top-left-decoration"> 
+      <img src="./assets/img/right.png" alt="image-top-right" class="top-right-decoration">
+      <img src="./assets/img/left.png" alt="image-top-left" class="top-left-decoration"> 
       <section id="media"></section>
       <div class="wrap">
          <div class="title">
          <br>    
+         <br>
+         <br>
+         <br>
+         <br>
          <br>
          <h4>With the divine grace of the almighty, Smt. Sudarshna Rani & Sh. Sat Pal Rajdev<br>inviting you and your family to</h4>
          <span class="sangeet">Sangeet Ceremony</span>
