some lines adjusted

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
          <br>
          <br>
          <br>
-         <h4>With the divine grace of the almighty, Smt. Sudarshna Rani & Sh. Sat Pal Rajdev<br>inviting you and your family to</h4>
+         <h4>With the divine grace of the almighty<br>Smt. Sudarshna Rani & Sh. Sat Pal Rajdev<br>inviting you and your family to</h4>
          <span class="sangeet">Sangeet Ceremony</span>
          <h4>of their beloved grand daughter</h4>
          <h1>Dr. Saivi </h1>
