--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,12 @@
       <meta name="email" content="sanjeevrajdev@gmail.com">
       <meta name="copyright" content="Sanjeev Rajdev 2023" />
       <meta property="og:type" content="website" />
-      <meta property="og:title" content="Wedding Invitation | 8th Nov | Maryland, Moga Road, Ferozepur" />
+      <meta property="og:title" content="Sangeet Invitation | 8th Nov | Maryland, Moga Road, Ferozepur" />
       <meta property="og:description"
          content="With the divine grace of the almighty, Smt. Sudarshna Rani & Sh. Sat Pal Rajdev inviting you and your family to Sangeet Ceremony of their beloved grand daughter to be held on 8th November at Maryland, Moga Road, Ferozepur from 7:00 PM onwards." />
       <meta property="og:url" content="" />
-      <meta property="og:site_name" content="Wedding Invitation | 8th Nov" />
-      <title>Wedding Invitation | Nov 8| Maryland, Moga Road, Ferozepur</title>
+      <meta property="og:site_name" content="Sangeet Invitation | 8th Nov" />
+      <title>Sangeet Invitation | Nov 8| Maryland, Moga Road, Ferozepur</title>
       <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
       <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap'>
       <link rel="stylesheet" href="./css/style.css">
